Fixed bug with bigger content than viewport on small screens

--- a/css/webpixel.css
+++ b/css/webpixel.css
@@ -32,11 +32,6 @@ main {
     transition: all 0.5s ease-in-out;
     left: 8.33333%;
 }
-main.fullwidth {
-    flex-basis: 100%;
-    max-width: 100%;
-    left: 0;
-}
 main::before {
     content: '';
     position: absolute;
@@ -459,6 +454,9 @@ p,
     background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,0.9) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 );
 }
+#contacts .col-md-5 {
+    z-index: 1;
+}
 #googlemap { 
     height: 100%; 
     width: 100%; 
@@ -708,6 +706,13 @@ input[type="text"]:active {
 .animated {
     opacity: 0;
 }
+#lightSlider {
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0px;
+}
 
 @-webkit-keyframes shadow-pulse
 {
@@ -781,6 +786,11 @@ input[type="text"]:active {
     .h-md-100 {
         height: 100%;
     }
+    main.fullwidth {
+        flex-basis: 100%;
+        max-width: 100%;
+        left: 0;
+    }
 }
 
 @media(max-width: 768px) {
@@ -836,5 +846,35 @@ input[type="text"]:active {
     main {
         left: 0;
         padding: 0;
+    }
+    #googlemap { 
+        height: 100%; 
+        width: 100%; 
+        position: relative; 
+        top: 0; 
+        left: 0; 
+        z-index: 1;
+    }
+    #googlemap::after {
+        display: none;
+    }
+    .section-heading {
+        font-size: 4vh;
+    }
+    .canvas-right {
+        right: 0;
+    }
+    .canvas-left {
+        left: 0;
+    }
+    #services .no-gutters {
+        margin: 0;
+    }
+    .tab-image {
+        display: none;
+    }
+    #projects .fp-tableCell > .row > .col-md-9::after {
+        left: 0;
+        right: 0;
     }
 }
